# OpticalFlow_SLAM

./: .gitignore  CMakeLists.txt  README.md  clear_and_run_shell.sh  error_and_solve.md  gdb.sh  just_run.sh  learning_note.md  map_measures.txt  obj.mtl  project_design.md  run_shell.sh  trajectory.txt
algorithm/: CMakeLists.txt  common_include.h
algorithm/base_component/include/: camera_config.h  feature2d.h  frame.h  g2o_type.h  keyframe.h  mappoint3d.h  system_config.h  tool.h
algorithm/base_component/src/: camera_config.cc  feature2d.cc  frame.cc  g2o_type.cc  keyframe.cc  mappoint3d.cc  system_config.cc  tool.cc
algorithm/module/include/: map.h  optimizer.h  tracker.h  viewer.h
algorithm/module/src/: map.cc  optimizer.cc  tracker.cc  viewer.cc
algorithm/opticalflow_slam/include/: macro_define.h  opticalflow_slam.h
algorithm/opticalflow_slam/src/: opticalflow_slam.cc
app/: CMakeLists.txt  run_vo.cc
config/: camera_config.yaml  system_config.yaml
typora_image/: 20171025150247668  20180212222953144
